#133 Fix - Tollbar header dropdown overflow if MarkdownInput has not enough height (#134)

--- a/src/client/components/PlainMarkdownInput/PlainMarkdownInput.less
+++ b/src/client/components/PlainMarkdownInput/PlainMarkdownInput.less
@@ -39,7 +39,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   position: relative;
 }
 
